// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/drawer/demo/basic-right.md correctly 1`] = `
<div><button type="button" class="gov-btn gov-btn-primary"><span>Open</span></button>
  <!---->
</div>
`;

exports[`renders ./components/drawer/demo/form-in-drawer.md correctly 1`] = `
<div><button type="button" class="gov-btn gov-btn-primary"><i class="anticon anticon-plus"><svg viewBox="64 64 896 896" data-icon="plus" width="1em" height="1em" fill="currentColor" aria-hidden="true" class="">
        <path d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"></path>
        <path d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"></path>
      </svg></i><span>New account</span></button>
  <!---->
</div>
`;

exports[`renders ./components/drawer/demo/multi-level-drawer.md correctly 1`] = `
<div><button type="button" class="gov-btn gov-btn-primary"><span>Open</span></button>
  <!---->
</div>
`;

exports[`renders ./components/drawer/demo/placement.md correctly 1`] = `
<div>
  <div class="gov-radio-group gov-radio-group-outline gov-radio-group-default" style="margin-right: 8px;"><label class="gov-radio-wrapper"><span class="gov-radio"><input type="radio" class="gov-radio-input" value="top"><span class="gov-radio-inner"></span></span><span>top</span></label><label class="gov-radio-wrapper"><span class="gov-radio"><input type="radio" class="gov-radio-input" value="right"><span class="gov-radio-inner"></span></span><span>right</span></label><label class="gov-radio-wrapper"><span class="gov-radio"><input type="radio" class="gov-radio-input" value="bottom"><span class="gov-radio-inner"></span></span><span>bottom</span></label><label class="gov-radio-wrapper gov-radio-wrapper-checked"><span class="gov-radio gov-radio-checked"><input type="radio" class="gov-radio-input" value="left"><span class="gov-radio-inner"></span></span><span>left</span></label></div> <button type="button" class="gov-btn gov-btn-primary"><span>Open</span></button>
  <!---->
</div>
`;

exports[`renders ./components/drawer/demo/user-profile.md correctly 1`] = `
<div>
  <div class="gov-list gov-list-split gov-list-bordered">
    <div class="gov-spin-nested-loading">
      <div class="gov-spin-container">
        <div class="gov-list-item">
          <div class="gov-list-item-meta">
            <div class="gov-list-item-meta-avatar"><span class="gov-avatar gov-avatar-circle gov-avatar-image"><img src="https://gw.alipayobjects.com/zos/rmsportal/BiazfanxmamNRoxxVxka.png"></span></div>
            <div class="gov-list-item-meta-content">
              <h4 class="gov-list-item-meta-title"><a href="https://vue.ant.design/">Lily</a></h4>
              <div class="gov-list-item-meta-description">Progresser AFX</div>
            </div>
          </div>
          <ul class="gov-list-item-action">
            <li><a>View Profile</a></li>
          </ul>
        </div>
        <div class="gov-list-item">
          <div class="gov-list-item-meta">
            <div class="gov-list-item-meta-avatar"><span class="gov-avatar gov-avatar-circle gov-avatar-image"><img src="https://gw.alipayobjects.com/zos/rmsportal/BiazfanxmamNRoxxVxka.png"></span></div>
            <div class="gov-list-item-meta-content">
              <h4 class="gov-list-item-meta-title"><a href="https://vue.ant.design/">Lily</a></h4>
              <div class="gov-list-item-meta-description">Progresser AFX</div>
            </div>
          </div>
          <ul class="gov-list-item-action">
            <li><a>View Profile</a></li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>
`;
